Also fixed spacing on website title

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -38,7 +38,6 @@
     letter-spacing: -1px;
     margin: auto;
     position: relative;
-    top: 1px;
 
     &,
     &:visited {
